--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -168,3 +168,11 @@ a.secondary {
     filter: invert();
   }
 }
+
+.container {
+  max-width: 800px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 3rem 4rem;
+  min-height: 80vh;
+}
